src/styles/main.css
/* ... */
.E:hover{
    transform: translateY(-10px);
    
}
.S:hover{
    transform: translateY(-10px);
    
}
.A:hover{
    transform: translateY(-10px);
    
}
.U:hover{
    transform: translateY(-10px);
    
}

/*header navigation bar*/
.headbartop{
    position: sticky;
    z-index: 99;
    top: 0;
    left: 0;
    padding-top: 15px;
    padding-bottom: 15px;
    height: 50px;
    background-color:rgb(237, 243, 248);
    color: black;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}
.headbardown{
    position: sticky;
    z-index: 99;
    top: -80px;
    left: 0;
    height: 50px;
    
    display: flex;
    justify-content: space-between;
    transition: 0.5s; 
}
.headbarup{
    position: sticky;
    z-index: 99;
    top: 0px;
    left: 0;
    padding-top: 15px;
    padding-bottom: 15px;
    height: 50px;
    background-color:rgb(237, 243, 248);
    color: black;
    display: flex;
    justify-content: space-between;
    transition: 0.5s;
}
.navmenu{
    display: flex;
}
.homenav{
    position: absolute;
    top: -20px;
    left: -20px;

}
.nav{
    transition: transform 0.5s;
    display: block;
    font-family: var(--font-sans);
    font-size: 20px;
    font-style: normal;
    font-weight: 600;
    position: relative;
    padding-right: 15px;
}
.nav:hover{
    transform: translateY(-10px);
}


  /*animated arrow and light/darkmode toggle*/
  

.toggle{
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    background-color: #1f1d1d;
    opacity: 0.5;
    border-radius: 50%;
    border: gainsboro 1px solid;
    padding: 10px;
    height: 50px;
    width: 50px;
    right: 18px;
    bottom: 40px;
    z-index: 99;
    transition: 0.25s;
}
.toggle:hover{
    opacity: 1;
    transition: 0.5s;
}

/* circle */
.circle{
    position: absolute;
    top: -700px;
    left: -700px;
    height: 1000px;
    width: 1000px;
    background-color:rgb(248, 85, 85);
    border-radius: 50%;
    overflow: hidden;
    transition: 0.5s;
    z-index: 2;
}
.circle2{
    position: absolute;
    top: -700px;
    left: -700px;
    height: 1000px;
    width: 1000px;
    background-color:rgb(85, 123, 248);
    border-radius: 50%;
    overflow: hidden;
    transition: 0.5s;
    z-index: 2;
}

/* resume timeline */

.timeline{
    display: flex;
    flex-direction: row;
    margin-top: 10px;
    height: 300px;
    width: 80%;
}
.highlight-styled{
    width: 2px;
    height: 50px;
    background-color: slategray;
}
.panel{
    display: flex;
    flex-direction: column;
    margin-right: 40px;
    width: 10vw;
}

.tab-1{
    outline: none;
    background-color: transparent;
    color: slategray;
    border: none;
    border-left: 3px solid slategray ;;
    font-size: 18px;
    width: 90%;
    height: 50px;
    display: flex;
    align-items: center;
    justify-content: center;
    
    transition:0.3s;
}
.tab-1:hover{
    background-color: rgba(19, 192, 57, 0.1);
    color: #ffbc48;
    border: none;
    border-left: 3px solid rgb(85, 248, 134);
    transition: 0.5s;
    cursor: pointer;
}
.tab-1:focus{
    color: #ffbc48;
    border: none;
    border-left: 3px solid rgb(85, 248, 134);
}

.img1{
    display: inline-block;
    position: absolute;
    width: 10em;
    height: 10em;
    top: 15em;
    right: 30em;

}


#projects{
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 600px;
    margin-bottom: 50px;
    container-type: inline-size;
}

.proj-grid-holder{
    display: flex;
    justify-content: center;
}
.project_grid{
    display: grid;
    
    grid-template-columns: repeat(auto-fill, minmax(350px,1fr));
    gap: 15px;
    color: white;
    
}

/* project cards */
.project_card{
    background: #272d33;
    background-size: 200%;
    width: 100%;
    height: 250px;
    border-radius: 20px;
    padding: 10px;
    position: relative;
    
    display: inline-block;
    transition: 0.5s;
    
    overflow: hidden;
}
.pro_bg{
    height: 128px;
    width: 128px;
    background-color: #ffbc48;
    position: absolute;
    top: -60px;
    right: -60px;
    z-index: 1;
    border-radius: 50%;
    transition: .5s ease;

}
.project_card:nth-child(2n) .pro_bg{
    background-color: rgb(248, 85, 85);
}
.project_card:nth-child(3n) .pro_bg{
    background-color: rgb(85, 248, 134);
}
.project_card:nth-child(4n) .pro_bg{
    background-color: rgb(85, 123, 248);
}
.project_header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    z-index: 2;
    margin-bottom: 35px;
}
.project_link{
    display: flex;
    margin-right: 5px;
}
.project_folder{
    display: block;
}

.project_title{
    font-weight: bolder;
    text-align: center;
    position: relative;
    overflow: hidden;
    z-index: 2;
}

.project_body{
    position: relative;
    z-index: 2;
    
}

.project_card:hover .pro_bg{
    
    transform: scale(10);
    transition: 0.5s;
    overflow: hidden;
}

.project_card:hover{
    transform: translateY(-5px);
    transition: 0.5s;
}


.logo{
    display: flex;
    position: absolute;
    align-items: center;
    justify-content: center;
    right: 400px;
    top: 300px;
    width: 200px;
    height: 200px;
    animation: float 5s infinite ease;
    container-type: inline-size;

}
@container (max-width:1500px) {
    .logo{
        display: none;
    }

}

@keyframes float {
    0%{
        transform: translateY(10px);
    }
    50%{
        transform: translateY(0px);
    }
    100%{
        transform: translateY(10px);
    }
}

.footer{
    font-size: 12px;
    display: block;
    position: relative;
    text-align: center;
    width: 100%;
    height: 50px;
    padding: 40px;
    background-color:  #ffbc48;

}


/* word orbit segment */

.orbit-container{

    display: flex;
    position: absolute;
    top: 25px;
    right: 200px;
    height: 300px;
    width: 300px;
    margin: 100px;
    container-type: inline-size
}
/* ... */

